# dspy-template-adapter

./: .gitignore  README.md  pyproject.toml
docs/: optimizer-audit.md
dspy_template_adapter/: __init__.py  predict.py  template_adapter.py
dspy_template_adapter/tests/: test_live_dspy_compat.py  test_template_adapter.py  test_utils.py
scripts/: live_optimizer_audit.py
