[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-template-adapter"
version = "0.1.0"
description = "A DSPy Adapter for exact-fidelity prompt templates with full control over messages."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Maxime Rivest", email = "mrive052@gmail.com"},
]
keywords = ["dspy", "llm", "prompt-engineering", "adapter", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dspy>=2.6",
    "json-repair>=0.25",
    "regex>=2023.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/maximerivest/dspy-template-adapter"
Repository = "https://github.com/maximerivest/dspy-template-adapter"
Issues = "https://github.com/maximerivest/dspy-template-adapter/issues"

[tool.setuptools.packages.find]
include = ["dspy_template_adapter*"]

[tool.pytest.ini_options]
testpaths = ["dspy_template_adapter/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
